[tool.poetry]
name = "com-wyattbaldwin-cached_property"
version = "1.1.dev0"
description = "@cached_property"
readme = "README.md"
authors = ["Wyatt Baldwin <self@wyattbaldwin.com>"]
repository = "https://github.com/wylee/com.wyattbaldwin/tree/dev/cached_property"

packages = [
    { include = "cached_property", from = "src" }
]

include = [
    "CHANGELOG.md",
    "README.md",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
com-wyattbaldwin = { path = "../com-wyattbaldwin", develop = true }
com-wyattbaldwin-make_release = { path = "../make_release", develop = true }
black = { version = "*", allow-prereleases = true }
coverage = "*"

[tool.make-release.args]
merge = false
tag-name = "{name}-{version}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
