[tool.poetry]
name = "com.wyattbaldwin.make_release"
version = "1.0a3.dev0"
description = "Make a release"
readme = "README.md"
authors = ["Wyatt Baldwin <self@wyattbaldwin.com>"]
repository = "https://github.com/wylee/com.wyattbaldwin/tree/dev/make_release"

packages = [
    { include = "make_release", from = "src" }
]

include = [
    "CHANGELOG.md",
    "README.md",
]

[tool.poetry.dependencies]
runcommands = "^1.0a63"
python = "^3.7"

[tool.poetry.dev-dependencies]
"com.wyattbaldwin" = { path = "../com.wyattbaldwin", develop = true }
black = { version = "*", allow-prereleases = true }
coverage = "*"

[tool.poetry.scripts]
make-release = "make_release:make_release.console_script"

[tool.make-release.args]
merge = false
tag-name = "{name}-{version}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
